packages/idris_db/test/errors/class/collection_supertype.dart
// supertype annotated with @collection

import 'package:idris_db/idris_db.dart';

@collection
class Supertype {
  late int id;
}

class Subtype implements Supertype {
  @override
  late int id;
}

@collection
class Model implements Subtype {
  @override
  late int id;
}
